# TDFE

./: ._CMakeLists.txt  .gitignore  CMakeLists.txt  README.md  bornoppenheimer.py  build.sh  faddeev.ipynb  ham.py  main.py  radial.ipynb  requirements.txt  schrodinger.ipynb  sympy.ipynb  test.py  twobody.py
2bd/: Hamiltonian2b.py
2bd/HermitSplines/: HermitSplines.f90  S32Functions.f90  __init__.py  compTB.sh  compile.sh  dump.f90  grep  tbSplines.f90  tbSplines_old.f90  test.py  test1.py
cpp/include/: hamiltonian2d.h  hamiltonian3d.h  s32.h  utils.h
cpp/lib/: hamiltonian3d.cpp  s32.cpp
cpp/wrappers/: wrapper.cpp
deprecated/: ham.py
deprecated/cpp/include/: bornoppenheimer.h  laser.h
deprecated/cpp/lib/: bornoppenheimer.cpp  hamiltonian2d.cpp  laser.cpp
deprecated/python/: main.py
include/: bornoppenheimer.h  hamiltonian2d.h  hamiltonian3d.h  s32.h  utils.h
lib/: hamiltonian2d.cpp  hamiltonian3d.cpp  s32.cpp
notebooks/: faddeev.ipynb  splines.ipynb
python/: faddeev1D3B.py  hamiltonian1D3B.py  plot.py  plotly_tools.py  radial.py  ypopov1D3B.py
scripts/: bornoppenheimer.py  ham.py  sympy.ipynb  test.py  test2.py  two_body_test.py  twobody.py
wrappers/: wrapper.cpp
